Sat Jun 16 09:27:27 MDT 2001 John Fleck <jfleck@inkstain.net>

	* updating tutorial: adding discussion of freeing memory, image
	files for callouts, link to xsltproc.c code

Sat Jun 16 15:23:43 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/variables.c: bug #56267 was still not fixed, forgot
	  to remove the old code
	* tests/general/bug-37-.xsl: wrong reference to 36 fixed, this does
	  the test for good

Sat Jun 16 00:32:39 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/variables.c: fixed bug #56267, namespaces must
	  be propagated when evaluating local variables.
	* tests/docs/Makefile.am tests/general/Makefile.am
	  tests/general/bug-37-* tests/docs/bug-37-*: added a specific
	  regression test for #56267 

Fri Jun 15 18:29:29 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/keys.c: avoid a possibility of an uninitialized variable
	* libxslt/documents.c libxslt/transform.[ch] libxslt/transform.h
	  libxslt/xsltInternals.h libxslt/xsltproc.c: Implement Raphael Hertzog
	  request to have xinclude processing done on document() if requested

Thu Jun 14 20:52:13 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/Makefile.am: applied patch from Sander Vesik for -j2 

Thu Jun 14 10:07:59 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/preproc.c: removed a warning on xsl:transform
	* tests/docs/Makefile.am tests/docs/array.xml tests/general/Makefile.am
	  tests/general/array.out tests/general/array.xsl: added a new
	  test fround in xsl-dev

Wed Jun 13 23:12:57 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* tests/docbook/result/html/*.html tests/XSLTMark/xslbench[12].out
	  tests/xmlspec/REC-xml-20001006*.html: the changes to the HTML
	  serializer of libxml impacted the result of some tests. Checked
	  that the XML REC renders identically.

Mon Jun 11 07:19:06 MDT 2001 John Fleck <jfleck@inkstain.net>

	* fixing embarassing typos in doc/tutorial/libxslttutorial.xml and 