@@ -43,6 +43,7 @@ EXTRA_DIST = \
     bug-37-.out bug-37-.xsl \
     bug-37-inc.out bug-37-inc.xsl \
     array.out array.xsl \
+    bug-38-.out bug-38-.xsl \
     character.out character.xsl \
     character2.out character2.xsl \
     itemschoose.out itemschoose.xsl \
