@@ -1,0 +1,2 @@
+<?xml version="1.0"?>
+<elem xmlns:ns="http://whatever"/>
